[gd_scene load_steps=12 format=2]

[ext_resource path="res://MainMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://art/inky1.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
font_data = ExtResource( 2 )

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 1790.3, 1507.02, 1510.58 ],
"_edit_vertical_guides_": [ 746.177, 1165.0, 961.69, 452.504 ]
}

[node name="ServerOptionsTitle" type="Label" parent="."]
margin_left = 1168.57
margin_top = 97.3521
margin_right = 1556.57
margin_bottom = 127.352
rect_scale = Vector2( 1.5, 1.5 )
custom_fonts/font = SubResource( 1 )
text = "Server Options"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="."]
margin_left = 387.996
margin_top = 807.003
margin_right = 473.996
margin_bottom = 840.003
rect_scale = Vector2( 1.5, 1.5 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelHost" type="Panel" parent="."]
margin_left = 1170.74
margin_top = 575.024
margin_right = 1563.74
margin_bottom = 820.024
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPanel" type="Label" parent="PanelHost"]
margin_left = 101.562
margin_top = 6.23633
margin_right = 280.562
margin_bottom = 36.2363
custom_fonts/font = SubResource( 2 )
text = "Create Server"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelServer" type="Label" parent="PanelHost"]
margin_left = 1.0
margin_top = 66.0
margin_right = 393.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 3 )
text = "Server name:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerName" type="LineEdit" parent="PanelHost"]
margin_left = 28.3723
margin_top = 89.9664
margin_right = 342.372
margin_bottom = 113.966
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPort" type="Label" parent="PanelHost"]
margin_left = 169.144
margin_top = 131.715
margin_right = 209.144
margin_bottom = 151.715
custom_fonts/font = SubResource( 4 )
text = "Port"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerPort" type="LineEdit" parent="PanelHost"]
margin_left = 160.465
margin_top = 154.46
margin_right = 218.465
margin_bottom = 178.46
text = "7777"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerCreate" type="Button" parent="PanelHost"]
margin_left = 146.521
margin_top = 199.017
margin_right = 232.521
margin_bottom = 232.017
text = "Create"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelJoin" type="Panel" parent="."]
margin_left = 1165.78
margin_top = 176.132
margin_right = 1559.78
margin_bottom = 424.132
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPanel" type="Label" parent="PanelJoin"]
margin_left = 2.0
margin_top = 8.0
margin_right = 392.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 5 )
text = "Join Server"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelIP" type="Label" parent="PanelJoin"]
margin_left = 140.145
margin_top = 64.1022
margin_right = 244.145
margin_bottom = 84.1022
custom_fonts/font = SubResource( 6 )
text = "IP"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinIP" type="LineEdit" parent="PanelJoin"]
margin_left = 133.035
margin_top = 88.7079
margin_right = 252.035
margin_bottom = 112.708
text = "127.0.0.1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelPort" type="Label" parent="PanelJoin"]
margin_left = 138.25
margin_top = 131.075
margin_right = 246.25
margin_bottom = 151.075
custom_fonts/font = SubResource( 7 )
text = "Port"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinPort" type="LineEdit" parent="PanelJoin"]
margin_left = 135.416
margin_top = 154.01
margin_right = 247.416
margin_bottom = 178.01
text = "7777"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinButton" type="Button" parent="PanelJoin"]
margin_left = 153.273
margin_top = 198.24
margin_right = 230.273
margin_bottom = 228.24
text = "Join"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelPlayer" type="Panel" parent="."]
margin_left = 155.991
margin_top = 345.998
margin_right = 545.991
margin_bottom = 629.998
rect_scale = Vector2( 1.5, 1.5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Profile" type="Label" parent="PanelPlayer"]
margin_left = 0.681122
margin_top = -45.459
margin_right = 388.682
margin_bottom = -15.459
custom_fonts/font = SubResource( 1 )
text = "Profile"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelName" type="Label" parent="PanelPlayer"]
margin_left = 6.0
margin_top = 13.0
margin_right = 388.0
margin_bottom = 43.0
custom_fonts/font = SubResource( 1 )
text = "Player name:"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="LineEdit" parent="PanelPlayer"]
margin_left = 43.2176
margin_top = 63.4977
margin_right = 352.217
margin_bottom = 87.4977
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelCharacter" type="Label" parent="PanelPlayer"]
margin_left = 9.0
margin_top = 120.999
margin_right = 387.0
margin_bottom = 150.999
custom_fonts/font = SubResource( 8 )
text = "Character select:"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCharacter" type="Sprite" parent="PanelPlayer"]
position = Vector2( 168.741, 204.513 )
scale = Vector2( 0.690015, 0.603764 )
texture = ExtResource( 3 )

[node name="PlayerColorSelect" type="OptionButton" parent="PanelPlayer"]
margin_left = 218.3
margin_top = 198.21
margin_right = 247.3
margin_bottom = 218.21
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="Play" to="." method="_on_ServerCreate_pressed"]
[connection signal="pressed" from="PanelHost/ServerCreate" to="." method="_on_ServerCreate_pressed"]
[connection signal="pressed" from="PanelJoin/JoinButton" to="." method="_on_JoinButton_pressed"]
